--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,9 @@ inputs:
   JOB_CREATION:
     required: true
     type: string
+  VIRTUAL_DEVICE_TOKEN:
+    required: true
+    type: string
 runs:
   using: "composite"
   steps:
@@ -19,18 +22,21 @@ runs:
       with:
         node-version: "16"
     - name: Update description
+      shell: bash
       run: |
         node -e "const fs=require('fs');
         const {name:description}=JSON.parse(fs.readFileSync('./${{ inputs.SOURCE_ID }}/.dashboard'));
         const testing=JSON.parse(fs.readFileSync('./${{ inputs.SOURCE_ID }}/testing.json'));
         fs.writeFileSync('./${{ inputs.SOURCE_ID }}/testing.json',JSON.stringify({...testing, description},null,4));"
     - name: bst version
+      shell: bash
       run: node /home/ubuntu/.nvm/versions/node/v16.20.0/bin/bst --version
     - name: Test
+      shell: bash
       run: node /home/ubuntu/.nvm/versions/node/v16.20.0/bin/bst test --virtualDeviceToken "$VIRTUAL_DEVICE_TOKEN" *.yml
       working-directory: ./${{ inputs.SOURCE_ID }}
       env:
-        VIRTUAL_DEVICE_TOKEN: ${{ secrets.VIRTUAL_DEVICE_TOKEN }}
+        VIRTUAL_DEVICE_TOKEN: ${{ inputs.VIRTUAL_DEVICE_TOKEN }}
         JOB_CREATION_TIMESTAMP: ${{ inputs.JOB_CREATION }}
         BESPOKEN_API_BASE_URL: https://bespoken-api-dev.bespoken.tools/
         SOURCE_API_BASE_URL: https://source-api-dev.bespoken.tools/
