--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,12 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: 'Cleanup runner'
+      run: |
+        cd ../../
+        ls -la
+        rm -Rf $REPO_NAME _PipelineMapping _temp _tool _actions
+        ls -la
     - name: Checkout repository
       uses: actions/checkout@v3
     - name: Setup Node
