--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,7 @@ runs:
   using: "composite"
   steps:
     - name: 'Cleanup runner'
+      shell: bash
       run: |
         cd ../../
         ls -la
