--- a/action.yml
+++ b/action.yml
@@ -16,12 +16,7 @@ runs:
   using: "composite"
   steps:
     - name: 'Cleanup runner'
-      shell: bash
-      run: |
-        cd ../../
-        ls -la
-        rm -fr $REPO_NAME _PipelineMapping _temp _tool _actions
-        ls -la
+      uses: vozdyxstuff/self-hosted-clean@v1
     - name: Checkout repository
       uses: actions/checkout@v3
     - name: Setup Node
